syntax = "proto3";

import "grpc_enums.proto";

package cartaProto;
option go_package = "./cartaProto";

message BasicFileInfo {
  string name = 1;
  int64 size = 2;
  FileType type = 3;
  bool isDirectory = 4;
  int64 lastModified = 5;
}